force-app/main/default/objects/Notification_Log__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>해당 알림을 발송하게 만든 캠페인을 연결(캠페인과 무관한 안내라면 비워둘 수 있음)</description>
    <inlineHelpText>해당 알림을 발송하게 만든 캠페인을 연결(캠페인과 무관한 안내라면 비워둘 수 있음)</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Notifications Logs</relationshipLabel>
    <relationshipName>Notifications_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>