force-app/main/default/objects/Notification_Log__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>팬에게 알림을 발송한 외부 커뮤니케이션 채널을 기록</description>
    <inlineHelpText>팬에게 알림을 발송한 외부 커뮤니케이션 채널을 기록</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Kakao AlimTalk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>