force-app/main/default/objects/Notification_Log__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>팬에게 실제로 발송한 개인화 안내 내용을 기록</description>
    <inlineHelpText>팬에게 실제로 발송한 개인화 안내 내용을 기록</inlineHelpText>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>