force-app/main/default/objects/Notification_Log__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>알림을 받은 팬(Person Account)의 이름을 연결</description>
    <inlineHelpText>알림을 받은 팬(Person Account)의 이름을 연결</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications Logs</relationshipLabel>
    <relationshipName>Notifications_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>