force-app/main/default/objects/Notification_Log__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>알림이 팬에게 발송된 일시를 기록</description>
    <inlineHelpText>알림이 팬에게 발송된 일시를 기록</inlineHelpText>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>