force-app/main/default/objects/Notification_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fan__c</columns>
    <columns>Campaign__c</columns>
    <columns>Content__c</columns>
    <columns>Sent_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>